# membrane

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/kv/prompts/: code.txt  natural.txt  repeat.txt  short.txt
benchmarks/results/: phase1-store-summary.md
docs/: architecture.md  phase2-kv-analysis.md
include/membrane/: backend.h  block.h  codec.h  kvdump.h  kvmetrics.h  stats.h  store.h
src/: stats.c
src/backends/: backend.c  backend_file.c  backend_internal.h
src/block/: block.c  crc32_table.h
src/codecs/: codec_registry.c  raw.c  rle.c
src/kvdump/: kvdump.c  kvmetrics.c
src/store/: store.c  store_index.c  store_internal.h
tests/unit/: CMakeLists.txt  test_block.c  test_codec_raw.c  test_codec_rle.c  test_helpers.h  test_kvdump.c  test_store.c  test_store_backend.c  test_store_concurrent.c
tools/membrane-bench/: CMakeLists.txt  main.c
tools/membrane-kv-analyze/: CMakeLists.txt  main.c
tools/membrane-kv-capture/: CMakeLists.txt  main.cpp
tools/membrane-store-bench/: CMakeLists.txt  main.c
